--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@feathersjs/rest-client": "^4.5.11",
     "@vueuse/core": "^6.5.3",
     "@vueuse/head": "^0.6.0",
+    "daisyui": "^1.14.2",
     "feathers-hooks-common": "^5.0.6",
     "feathers-pinia": "^0.13.23",
     "nprogress": "^0.2.0",
