--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@vueuse/head": "^0.6.0",
     "daisyui": "^1.14.2",
     "feathers-hooks-common": "^5.0.6",
-    "feathers-pinia": "^0.13.23",
+    "feathers-memory": "^4.1.0",
+    "feathers-pinia": "^0.15.1",
+    "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
-    "pinia": "^2.0.0-rc.10",
+    "pinia": "^2.0.0-rc.11",
     "prism-theme-vars": "^0.2.2",
     "vue": "^3.2.19",
     "vue-demi": "^0.11.4",
